esdf collision OK, add plannning demo for car or drone (using is_2D_planning to determine 3D bound or 2D bound)

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -53,6 +53,16 @@
         "core": "cpp",
         "chrono": "cpp",
         "*.ipp": "cpp",
-        "thread": "cpp"
+        "thread": "cpp",
+        "ctime": "cpp",
+        "condition_variable": "cpp",
+        "ratio": "cpp",
+        "set": "cpp",
+        "mutex": "cpp",
+        "valarray": "cpp",
+        "iomanip": "cpp",
+        "numeric": "cpp",
+        "typeindex": "cpp",
+        "variant": "cpp"
     }
 }
