--- a/package.xml
+++ b/package.xml
@@ -67,6 +67,12 @@
   <exec_depend>octomap_msgs</exec_depend>
 
 
+  <build_depend>traj_msgs</build_depend>
+  <build_export_depend>traj_msgs</build_export_depend>
+  <exec_depend>traj_msgs</exec_depend>
+
+
+
   <!-- The export tag contains other, unspecified, tags -->
   <export>
     <!-- Other tools can request additional information be placed here -->
